[bumpversion]
current_version = 1.0.0
commit = True
tag = False

[bumpversion:file:combineharvester-flow/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = CombineHarvester-flow
version = attr: CombineHarvester-flow.__version__
author = Peter Taylor
author_email = taylor.4264@osu.edu
description = Harvest and combine chains from different data sets
long_description = file: README.md
license = GNU General Public License v3.0
project_urls = 
	Bug Reports=https://github.com/pltaylor16/CombineHarvester-flow/issues
	Source=https://github.com/pltaylor16/CombineHarvester-flow

[options]
python_requires = >=3.10
install_requires = file: requirements.txt

[options.extras_require]
dev = 
	pytest
	flake8
	bump2version
pub = 
	build
	twine
