[bumpversion]
current_version = 1.0.0
commit = True
tag = False

[bumpversion:file:combineharvesterflow/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = CombineHarvesterFlow
version = attr: CombineHarvesterFlow.__version__
author = Peter Taylor
author_email = taylor.4264@osu.edu
description = Harvest and combine chains from different data sets
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
project_urls = 
	Bug Reports=https://github.com/pltaylor16/CombineHarvesterFlow/issues
	Source=https://github.com/pltaylor16/CombineHarvesterFlow

[options]
python_requires = >=3.10
install_requires = file: requirements.txt

[options.extras_require]
dev = 
	pytest
	flake8
	bump2version
pub = 
	build
	twine
